--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,12 @@ padding-bottom: 110px;
 	margin-top: 60px;
 	 }
 	}
+
+	@media (max-width: 768px) {
+	.header-pretitle{
+	margin: 0 auto;
+	 }
+	}
 	/*@media (max-width: 992px) {
 		.header-img{
 		display: none;	
