--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,11 @@ padding-bottom: 110px;
 	margin-top: 60px;
 	 }
 	}
-
+@media (max-width: 768px) {
+	.row{
+	margin: 0 auto;
+	 }
+	}
 	
 	/*@media (max-width: 992px) {
 		.header-img{
