initial border text

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,25 @@ margin-top: 10px;
 text-align: justify;
 }
 
+.portfolio-text2{
+color: #000000;
+/*font-size: 20px;*/
+/*font-weight: 400;*/
+margin: 0;
+text-align: justify;
+}
+
+.portfolio-text3{
+margin-top: 0;
+
+}
+
+.outline{
+border: 2px solid green; 
+padding: 5px;	
+margin-bottom: 2px;
+}
+
 /* Оформление подвала */
 footer {
 background-color: #3a7dfd;
