--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ margin-top: 21px;
 }
 
 .header-pretitle{
-	margin-top: 60px;
+	margin-top: 55px;
 	}
 
 .header-subtitle {
@@ -218,7 +218,19 @@ padding-bottom: 110px;
 
 	@media (max-width: 1200px) {
 	.header-pretitle{
-	margin-top: 40px;
+	margin-top: 45px;
+	 }
+	}
+
+	@media (max-width: 768px) {
+	.header-pretitle{
+	margin-top: 47px;
+	 }
+	}
+
+	@media (max-width: 992px) {
+	.header-pretitle{
+	margin-top: 47px;
 	 }
 	}
 @media (max-width: 768px) {
