--- a/css/style.css
+++ b/css/style.css
@@ -105,14 +105,22 @@ header small {
 }
 .portfolio-title {
 	text-transform: uppercase;
-	font-size: 22px;
+	font-size: 26px;
 	color: #072b6f;
 	margin-bottom: 25px;
 }
 .portfolio-subtitle {
 margin-top: 10px;
-font-size: 14px;
-color: #7bb9ff;
+font-size: 24px !important;
+color: #006400 !important;
+}
+
+.ul,li {
+margin-top: 10px;
+font-size: 21px;
+text-align: left;
+margin-left: 50px;
+list-style-type: circle;
 }
 
 .portfolio-title, .portfolio-subtitle {
@@ -125,8 +133,8 @@ color: #7bb9ff;
 	padding-right: 50px;
 }
 .portfolio-block h3{
-color: #072b6f;
-font-size: 18px;
+color: #072B6F;
+font-size: 22px;
 font-weight: 700;
 text-transform: uppercase;
 }
