--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,7 @@ header small {
 	text-transform: uppercase;
 	font-size: 26px;
 	color: #072b6f;
-	margin: 0 auto;
-	margin-bottom: 25px;
+	margin: 10px 5px 25px 5px;
 }
 .portfolio-subtitle {
 margin: 10px 5px 10px;
