--- a/css/style.css
+++ b/css/style.css
@@ -125,12 +125,17 @@ list-style-type: circle;
 .portfolio-title, .portfolio-subtitle {
 	text-align: center;
 }
+
 .portfolio-col-1 {
-	padding-left: 50px;
+	padding-left: 40px;
+	padding-right: 10px;
 }
+
 .portfolio-col-2 {
-	padding-right: 50px;
-}
+		padding-left: 10px;
+		padding-right: 40px;
+	}
+
 .portfolio-block h3{
 color: #072B6F;
 font-size: 22px;
@@ -289,9 +294,14 @@ padding-bottom: 110px;
 		margin-bottom: 40px;
 	}
 	}
+	
+
+	@media(max-width: 768px) {
 	.portfolio-col-2 {
 		padding-left: 20px;
-		padding-right: 30px;
+		padding-right: 20px;
+		margin-bottom: 40px;
+	}
 	}
 .footer-author, .footer-text{	
 	text-align: center;
