--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ text-align: justify;
 }
 
 .outline{
-border: 2px solid green; 
+border: 2px solid #D316D8; 
 padding: 5px;	
 margin-bottom: 2px;
 }
