--- a/css/style.css
+++ b/css/style.css
@@ -225,8 +225,31 @@ text-align: justify;
 
 .portfolio-text5{
 margin-top: 5px;
-margin-bottom: 5px;
+margin-bottom: 15px;
 text-align: justify;
+}
+
+#vk_groups{
+margin-top: 20px;
+
+}
+
+.ya-share2 a{
+margin-top: 15px;
+border-bottom: none;
+}
+
+.ya-share2__list{
+margin-top: 20px !important;
+}
+
+
+
+.ya-share2__container_size_m .ya-share2__icon{
+
+	height: 50px !important;
+    width: 50px !important;
+    background-size: 24px 24px;
 }
 
 .outline{
@@ -316,6 +339,12 @@ padding-bottom: 110px;
 	@media (max-width: 992px) {
 	.header-pretitle{
 	margin-top: 47px;
+	 }
+	}
+
+	@media (max-width: 576px) {
+	.ya-share2{
+	text-align: center;
 	 }
 	}
 
