--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 	font-size: 20px;
 }
 
+
 img {
 	max-width: 100%;
 	border-radius: 30px;
@@ -16,10 +17,64 @@ header {
 	background-color: #3a7dfd;
 	color: #ffffff;
 }
+
+
 /*
 .header-img{
 
 }*/
+
+/* задаем относительное позиционирование контейнеру */
+.block{position:relative;}
+/* Оформление скрытого элемента по умолчанию */ 
+.hidden
+{display: none;
+position: absolute;
+bottom: 130%;
+left: 0px;
+background-color: #fff;
+color: #3aaeda;
+padding: 5px;
+text-align: center;
+-moz-box-shadow: 0 1px 1px rgba(0,0,0,.16);
+-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.16);
+box-shadow: 0 1px 1px rgba(0,0,0,.16);
+font-size: 12px;}
+/* Дополнительное оформление скрытого элемента(необязательно) */
+.focus + .hidden:before
+{content: " ";
+position: absolute;
+top: 98%;
+left: 10%;
+margin-left: -5px;
+border-width: 5px;
+border-style: solid;
+height: 0;
+width: 0;
+border: 7px solid transparent;
+border-right: 7px solid #fff;
+border-color: #fff transparent transparent transparent;
+z-index: 2;}
+/* Дополнительное оформление скрытого элемента(необязательно) */
+.focus + .hidden:after
+{content: " ";
+position: absolute;
+top: 100%;
+left: 10%;
+margin-left: -5px;
+border-width: 5px;
+border-style: solid;
+height: 0;
+width: 0;
+border: 7px solid transparent;
+border-right: 7px solid #fff;
+border-color: rgba(0,0,0,.16) transparent transparent transparent;
+z-index: 1;}
+/* Появление скрытого элемента при клике */
+.focus:focus + .hidden{display: block;}
+
+
+
 
 /************** Стили для видео***************/
 .embed-responsive.embed-responsive-16by9 {
@@ -48,11 +103,18 @@ header {
 	height: 100%;
 	border: 0;
 }
+.centered {
+    text-align: center;
+}
 
 /*.header-img{
 	border: 5px solid #7CDB22;
 	border-radius: 50px;
 }*/
+
+h2{
+color: #c32017;	
+}
 
 h3{
 text-align: center;
@@ -72,12 +134,14 @@ margin-top: 21px;
 }
 
 .header-pretitle{
-	margin-top: 55px;
+	margin-top: 5px;
 	}
 
 .header-subtitle {
 	margin-top: 20px;
+	color: #fff;
 }
+
 .header-button {
 display: inline-block;
 text-decoration: none;
@@ -173,15 +237,7 @@ font-size: 22px;
 font-weight: 700;
 text-transform: uppercase;
 }
-.portfolio-block a {
-/*color: #072b6f;*/
-color: #c32017;
-font-weight: 400;
-text-decoration: none;
-/*display: table; ширина по тексту в заголовке*/
-border-bottom: 2px solid #c32017;/*амо подчеркивание*/
-line-height: 21px;/*высота строки, ну и соответственно отступ от подчеркивания*/
-}
+
 .portfolio-text li{
 color: #000000;
 margin-top: 5px; 
@@ -218,14 +274,14 @@ text-align: justify;
 }
 
 .portfolio-text4{
-margin-top: 0;
+margin-top: 15px;
 margin-bottom: 5px;
 text-align: justify;
 }
 
 .portfolio-text5{
-margin-top: 5px;
-margin-bottom: 15px;
+margin-top: 15px;
+margin-bottom: 5px;
 text-align: justify;
 }
 
@@ -291,11 +347,21 @@ padding-bottom: 110px;
 	.footer-cta { 
 	margin-bottom: 13px;
 	}
+
+.portfolio-block a {
+/*color: #072b6f;*/
+color: #fff;
+font-weight: 400;
+text-decoration: none;
+/*display: table; ширина по тексту в заголовке*/
+/*border-bottom: 2px solid #c32017;/*амо подчеркивание*/
+line-height: 21px;/*высота строки, ну и соответственно отступ от подчеркивания*/
+}
 	.footer-button {
 	display: inline-block;
 	text-decoration: none;
 	border: 1px solid #ffffff;
-	background-color: transparent;
+	/*background-color: transparent;*/
 	color: #fff;
 	font-size: 18px;
 	border-radius: 50px;
@@ -307,6 +373,29 @@ padding-bottom: 110px;
 	.footer-button:hover {
 	background-color: #fff;	
 	color: #3a7dfd;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+	}
+
+	.link-button{
+	display: inline-block;
+	text-decoration: none;
+	border: 1px solid #ffffff;
+	/*background-color: transparent;*/
+	background-color: #0C920C;
+	color: #fff;
+	font-size: 18px;
+	border-radius: 50px;
+	padding: 12px 20px;	
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+	}
+
+	.link-button:hover {
+	background-color: #035F03;	
+	color: #fff;
 	-webkit-transition: 0.2s;
 	-o-transition: 0.2s;
 	transition: 0.2s;
